--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.lms-label{
+    @apply uppercase block mb-2 text-xs font-bold text-gray-700;
+}
+.lms-input{
+    @apply block w-full  px-4 py-3 leading-tight text-gray-700 border rounded appearance-none ;
+}
+
