--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,5 +9,5 @@
     @apply block w-full  px-4 py-3 leading-tight text-gray-700 border rounded appearance-none ;
 }
 .lms-btn{
-    @apply block bg-sky-400 px-4 py-3 rounded
+    @apply block bg-blue-500 px-4 py-3 rounded
 }
